# meridian

./: .dockerignore  .gitignore  API_IMPLEMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PHASE1_PROGRESS.md  README.md  SECURITY.md  SEPOLIA_DEPLOYMENT.md  config.multi-chain.env.example  railway.toml  vercel.json
.github/workflows/: ci.yml  deploy.yml
contracts/: INSTALL.md  README.md  foundry.toml  slither.config.json
contracts/script/: Deploy.s.sol
contracts/src/: MeridianFactory.sol  MeridianStablecoin.sol  MeridianTimelock.sol
contracts/test/: MeridianFactory.t.sol  MeridianStablecoin.fuzz.t.sol  MeridianStablecoin.invariant.t.sol  MeridianStablecoin.t.sol  MeridianTimelock.t.sol  UpgradeScenarios.t.sol
crates/api/: Cargo.toml  README.md  config.example.env
crates/api/src/: error.rs  lib.rs  main.rs  metrics.rs  middleware.rs  models.rs  openapi.rs  routes.rs  state.rs  telemetry.rs
crates/api/src/handlers/: agents.rs  auth.rs  auth_utils.rs  baskets.rs  health.rs  kyc.rs  mod.rs  operations.rs  oracle.rs  reserves.rs  tenants.rs
crates/api/tests/: integration_tests.rs
crates/basket/: Cargo.toml
crates/basket/src/: lib.rs
crates/basket/tests/: precision_edge_cases.rs  proptest_precision.rs  rebalancing_scenarios.rs  sdr_validation.rs
crates/chains/: Cargo.toml
crates/chains/src/: execution.rs  lib.rs  signer.rs
crates/compliance/: Cargo.toml
crates/compliance/src/: kyb.rs  kyc.rs  lib.rs  mica.rs  monitoring.rs  risk.rs  sanctions.rs
crates/custody/: Cargo.toml
crates/custody/src/: bitgo.rs  fireblocks.rs  lib.rs  mock.rs
crates/db/: Cargo.toml  README.md
crates/db/migrations/: 20251001000001_create_baskets_table.sql  20251001000002_create_price_history_table.sql  20251001000003_create_stablecoins_table.sql  20251001000004_create_audit_logs_table.sql  20251001000005_convert_decimals_to_text.sql  20251027000001_create_auth_tables.sql  20251230000001_add_idempotency_key.sql  20251230000002_add_performance_indexes.sql  20260101000001_add_compliance_tables.sql  20260201000001_add_tenants.sql  20260201000002_add_api_keys.sql  20260201000003_add_webhooks.sql  20260301000001_add_external_kyc_id.sql  20260301000002_add_kyb_applications.sql  20260401000001_numeric_decimal_columns.sql
crates/db/src/: decimal_helpers.rs  error.rs  lib.rs  models.rs
crates/db/src/repositories/: audit.rs  baskets.rs  mod.rs  prices.rs  stablecoins.rs
crates/db/tests/: load_test.rs  repository_tests.rs
crates/oracle/: Cargo.toml  README.md
crates/oracle/examples/: fetch_eur_usd.rs  test_all_pairs.rs
crates/oracle/src/: error.rs  feeds.rs  lib.rs  oracle.rs
crates/oracle/tests/: integration_tests.rs  staleness_test.rs
docs/: RUNBOOK.md
docs/alerts/: prometheus-rules.yml
meridian-frontend/: .env.example  .gitignore  INSTITUTIONAL_PORTAL.md  README.md  configure-backend.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  setup-env.js  tailwind.config.ts  test-backend.js  test-theme.html  vitest.config.ts  vitest.setup.ts  vitest.setup.tsx
meridian-frontend/__tests__/components/portal/: PortalButton.test.tsx  PortalCard.test.tsx
meridian-frontend/__tests__/components/ui/: Badge.test.tsx  Button.test.tsx  Card.test.tsx  MetricCard.test.tsx
meridian-frontend/__tests__/lib/auth/: client.test.ts
meridian-frontend/app/: globals.css  layout.tsx  page.tsx  theme-init.js
meridian-frontend/app/contact/: page.tsx
meridian-frontend/app/docs/: page.tsx
meridian-frontend/app/portal/: error.tsx  layout.tsx  loading.tsx  not-found.tsx
meridian-frontend/app/portal/agents/: page.tsx
meridian-frontend/app/portal/compliance/: page.tsx
meridian-frontend/app/portal/dashboard/: page.tsx
meridian-frontend/app/portal/login/: page.tsx
meridian-frontend/app/portal/mint/: page.tsx
meridian-frontend/app/portal/onboarding/: page.tsx
meridian-frontend/app/portal/register/: page.tsx
meridian-frontend/app/reserves/: page.tsx
meridian-frontend/app/test/: page.tsx
meridian-frontend/components/: LayoutContent.tsx  SkipToContent.tsx  ThemeToggle.tsx
meridian-frontend/components/meridian/: CircularProgress.tsx  MetricDisplay.tsx  ReserveChart.tsx  ReserveRatioBar.tsx  Sparkline.tsx
meridian-frontend/components/portal/: Breadcrumbs.tsx  DashboardSkeleton.tsx  OnboardingWizard.tsx  PortalButton.tsx  PortalCard.tsx  PortalEmptyState.tsx  PortalHeader.tsx  PortalInput.tsx  PortalMetricCard.tsx  PortalSelect.tsx  PortalStatusBadge.tsx  PortalTable.tsx
meridian-frontend/components/sacred/: Button.tsx  Card.tsx  Grid.tsx  Table.tsx  Typography.tsx
meridian-frontend/components/ui/: AnimatedSection.tsx  Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  EnergySphere.tsx  FloatingElements.tsx  GlassCard.tsx  GlowingButton.tsx  GradientText.tsx  Hero.tsx  MetricCard.tsx  Skeleton.tsx  index.ts
meridian-frontend/e2e/: auth.spec.ts  landing.spec.ts  navigation.spec.ts  reserves.spec.ts
meridian-frontend/hooks/: useRealtimeData.ts
meridian-frontend/lib/: utils.ts
meridian-frontend/lib/api/: client.ts  realtime-client.ts
meridian-frontend/lib/auth/: AuthContext.tsx  client.ts  types.ts
meridian-frontend/lib/providers/: QueryProvider.tsx
meridian-frontend/lib/queries/: reserves.ts
meridian-frontend/lib/web3/: config.ts
meridian-frontend/public/: site.webmanifest
meridian-frontend/styles/: design-system.css  sacred-tokens.css
programs/meridian-solana/: Anchor.toml  Cargo.toml  README.md
programs/meridian-solana/src/: lib.rs
programs/meridian-solana/tests/: integration_test.rs
scripts/: deploy_railway.sh  deploy_vercel.sh
