[workspace]
resolver = "2"
members = [
    "crates/basket",
    "crates/oracle",
    "crates/api",
    "crates/db",
    "crates/compliance",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Meridian Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
actix-web = "4.4"
actix-cors = "0.7"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Financial precision
rust_decimal = { version = "1.33", features = ["serde", "db-postgres"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Blockchain interaction
ethers = { version = "2.0", features = ["ws", "rustls"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Testing
mockall = "0.12"

