[workspace]
resolver = "2"
members = [
    "crates/basket",
    "crates/oracle",
    "crates/api",
    "crates/db",
    "crates/chains",
    "crates/compliance",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Meridian Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
actix-web = "4.4"
actix-cors = "0.7"
actix-governor = "0.5"

# Database
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Financial precision
rust_decimal = { version = "1.38", features = ["serde", "db-tokio-postgres"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Blockchain interaction
ethers = { version = "2.0", features = ["ws", "rustls"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging and Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry for distributed tracing (CRIT-003)
opentelemetry = { version = "0.27", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic", "trace"] }
tracing-opentelemetry = "0.28"

# Metrics (CRIT-004)
actix-web-opentelemetry = { version = "0.19", features = ["metrics"] }
opentelemetry-prometheus = "0.27"
prometheus = "0.13"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Testing
mockall = "0.12"

# OpenAPI documentation
utoipa = { version = "4.2", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }

