[package]
name = "meridian-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "meridian-api"
path = "src/main.rs"

[dependencies]
# Meridian crates
meridian-basket = { path = "../basket" }
meridian-oracle = { path = "../oracle" }
meridian-db = { path = "../db" }

# Web framework
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-governor = { workspace = true }

# Blockchain
ethers = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging and Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenTelemetry for distributed tracing (CRIT-003)
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Metrics (CRIT-004)
actix-web-opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
bcrypt = "0.15"

# Database
sqlx = { workspace = true }

# Cryptography
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# OpenAPI documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }

