[package]
name = "meridian-chains"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Blockchain
ethers = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async runtime (for background confirmation worker)
tokio = { workspace = true }

# Database (for confirmation worker queries)
sqlx = { workspace = true }

# Async trait support (for SignerProvider trait)
async-trait = { workspace = true }

# Observability
tracing = { workspace = true }

