[package]
name = "meridian-compliance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
tokio = { workspace = true }

# Signing for KYC provider APIs (Sumsub RS256 / HMAC)
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rust_decimal_macros = "1"

